[gd_scene load_steps=11 format=3 uid="uid://biepw3gb8bcue"]

[ext_resource type="PackedScene" uid="uid://b524q435s8xuh" path="res://src/player/player.tscn" id="1_2tvxm"]
[ext_resource type="Script" uid="uid://s0l3svwn5rj0" path="res://src/level/level.gd" id="1_qimrh"]
[ext_resource type="PackedScene" uid="uid://cr514afpudpu0" path="res://src/player/trail/player_trail.tscn" id="2_dp51t"]
[ext_resource type="PackedScene" uid="uid://dufqidwgk1b28" path="res://src/player/trail/collision/trail_collision_manager.tscn" id="3_6qic3"]
[ext_resource type="PackedScene" uid="uid://xj62mrn8p1oo" path="res://src/level/ui/remaining_edible_counter.tscn" id="5_ibb6m"]
[ext_resource type="PackedScene" uid="uid://ii8882bpv1n6" path="res://src/level/edible_spawner.tscn" id="6_45qq1"]
[ext_resource type="PackedScene" uid="uid://psq5s2rba4sq" path="res://src/level/ui/level_ui.tscn" id="6_s1udc"]
[ext_resource type="PackedScene" uid="uid://k2rqx22hnehf" path="res://src/level/level_stage_manager.tscn" id="6_u3frg"]
[ext_resource type="PackedScene" uid="uid://b1wvqav5ddth0" path="res://src/level/level_camera.tscn" id="9_8srtw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_p6v4a"]
blend_mode = 1

[node name="Level" type="Node2D"]
script = ExtResource("1_qimrh")

[node name="PlayerTrail" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_dp51t")]
player = NodePath("../Player")

[node name="TrailCollisionManager" parent="." node_paths=PackedStringArray("trail") instance=ExtResource("3_6qic3")]
trail = NodePath("../PlayerTrail")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.056, 0.0588, 0.07, 1)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -9

[node name="RemainingEdibleCounter" parent="CanvasLayer2" node_paths=PackedStringArray("stage_manager") instance=ExtResource("5_ibb6m")]
offset_left = -95.5
offset_top = -78.5
offset_right = 95.5
offset_bottom = 78.5
theme_override_colors/font_color = Color(0.435, 0.522, 0.87, 0.12549)
theme_override_font_sizes/font_size = 448
text = "123"
horizontal_alignment = 1
vertical_alignment = 1
stage_manager = NodePath("../../LevelStageManager")

[node name="LevelUI" parent="CanvasLayer2" instance=ExtResource("6_s1udc")]
modulate = Color(1, 1, 1, 0.705882)

[node name="CanvasLayerOverlay" type="CanvasLayer" parent="."]

[node name="ColorRectDeath" type="ColorRect" parent="CanvasLayerOverlay"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_p6v4a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.6525, 0.696, 0.87, 1)

[node name="EdibleSpawner" parent="." node_paths=PackedStringArray("level") instance=ExtResource("6_45qq1")]
level = NodePath("..")

[node name="LevelStageManager" parent="." node_paths=PackedStringArray("spawner") instance=ExtResource("6_u3frg")]
spawner = NodePath("../EdibleSpawner")

[node name="LevelCamera" parent="." instance=ExtResource("9_8srtw")]
anchor_mode = 0
shake_strength = 50.0

[node name="TimerRestart" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="Spawnables" type="Node2D" parent="." groups=["spawnables"]]

[node name="Player" parent="." instance=ExtResource("1_2tvxm")]
position = Vector2(540, 960)

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="edible_eaten" from="EdibleSpawner" to="LevelCamera" method="_on_edible_spawner_edible_eaten"]
[connection signal="timeout" from="TimerRestart" to="." method="_on_timer_restart_timeout"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
